--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ show_downloads: false
 theme: jekyll-theme-cayman
 github:
   is_project_page: true
-  repository_url: https://github.com/bowfolios/bowfolios
+  repository_url: https://github.com/virtual-campus-tour
 gems:
   - jekyll-mentions
